--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,12 @@ dependencies:
   provider: ^4.0.0
   shared_preferences: ^2.0.8
   image_picker: ^0.6.7+22
+  flutter_local_notifications: ^4.0.1+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.2
+  flutter_launcher_icons: ^0.8.1
 
 flutter_icons:
   android: true
@@ -72,9 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+#  assets:
+#    - assets/images/icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
